scripts/nullness/annotator/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../annotator/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Cola.java:45: error: [return] incompatible types in return.
        return datoAuxiliar;
               ^
  type of expression: @Initialized @Nullable Pasajero
  method return type: @Initialized @NonNull Pasajero
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
